hn_tests/opt/failing/euler6-1.hn
hnMain = {
	natr f = {
		g x total = 1
		natrec g 0 100
	}
	id x = sum x 0
	sqr x = mul x x
	print (sub (sqr (natr id)) (natr sqr))
}